--- a/src/app/pages/rooms/room-detail/room-detail.component.scss
+++ b/src/app/pages/rooms/room-detail/room-detail.component.scss
@@ -20,6 +20,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 5px 10px;
+
+  span {
+    margin-left: 10px;
+  }
 }
 
 .select {
